remove legacy api surface
