# docs/openapi-target-source.yaml
@@ -40,8 +40,6 @@ paths:
     $ref: './openapi/paths/files.yaml#/~1api~1v1~1files~1batch'
 
   # Generate
-  /api/v1/generate/courseware:
-    $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1courseware'
   /api/v1/generate/sessions:
     $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1sessions'
   /api/v1/generate/sessions/{session_id}:
@@ -62,22 +60,8 @@ paths:
     $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1sessions~1{session_id}~1slides~1{slide_id}~1regenerate'
   /api/v1/generate/capabilities:
     $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1capabilities'
-  /api/v1/generate/tasks/{task_id}/status:
-    $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1tasks~1{task_id}~1status'
-  /api/v1/generate/tasks/{task_id}/download:
-    $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1tasks~1{task_id}~1download'
-  /api/v1/generate/tasks/{task_id}/versions:
-    $ref: './openapi/paths/generate.yaml#/~1api~1v1~1generate~1tasks~1{task_id}~1versions'
 
   # Preview
-  /api/v1/preview/{task_id}:
-    $ref: './openapi/paths/preview.yaml#/~1api~1v1~1preview~1{task_id}'
-  /api/v1/preview/{task_id}/modify:
-    $ref: './openapi/paths/preview.yaml#/~1api~1v1~1preview~1{task_id}~1modify'
-  /api/v1/preview/{task_id}/slides/{slide_id}:
-    $ref: './openapi/paths/preview.yaml#/~1api~1v1~1preview~1{task_id}~1slides~1{slide_id}'
-  /api/v1/preview/{task_id}/export:
-    $ref: './openapi/paths/preview.yaml#/~1api~1v1~1preview~1{task_id}~1export'
   /api/v1/generate/sessions/{session_id}/preview:
     $ref: './openapi/paths/preview.yaml#/~1api~1v1~1generate~1sessions~1{session_id}~1preview'
   /api/v1/generate/sessions/{session_id}/preview/modify:
